Revert "Add `mdl-badge--overlap` class (fixes #708)"
This reverts commit 9b3383c5f45ee1f3dcb89077392602bc8b0478ad.

--- a/src/badge/_badge.scss
+++ b/src/badge/_badge.scss
@@ -63,7 +63,4 @@
       box-shadow: 0 0 1px gray;
     }
   }
-  &.mdl-badge--overlap:after {
-    right: -10px;
-  }
 }
